--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -31,12 +31,15 @@ a:hover {
   border-radius: 6px;
   max-width: 360px;
   margin: 0 auto;
-  padding: 4px;
-  background: #4696e5;
+  background: #fff;
+  border: solid 4px #4696e5;
 }
 
 #steemit-profile .uk-comment-header {
   margin-bottom: 5px;
+  border: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 #steemit-profile .uk-comment-avatar {
@@ -46,8 +49,13 @@ a:hover {
   background-size: cover; width: 50px; height: 50px;
 }
 
-#steemit-profile .uk-comment-body {
+#steemit-profile .uk-comment-title,
+#steemit-profile .uk-comment-meta {
   color: #fff;
+}
+
+#steemit-profile .uk-comment-body {
+  color: #999;
 }
 
 .steemit-post {
